ENH: Adding installation directory for python module

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -77,18 +77,23 @@ file( TO_NATIVE_PATH "${SimpleITK_PYTHON_PACKAGE_DIR}" SimpleITK_PYTHON_PACKAGE_
 set(SimpleITK_PYTHON_TEST_EXECUTABLE "${PYTHON_EXECUTABLE}" CACHE INTERNAL "Python executable for testing." FORCE )
 
 if(DEFINED SKBUILD)
+
+  if(NOT DEFINED SimpleITK_INSTALL_PYTHON_LIBRARY_DIR)
+    set(SimpleITK_INSTALL_PYTHON_LIBRARY_DIR SimpleITK)
+  endif()
+  
   # Currently this installation
   install(FILES
       ${CMAKE_CURRENT_BINARY_DIR}/SimpleITK.py
       ${CMAKE_CURRENT_SOURCE_DIR}/Packaging/__init__.py
       ${SimpleITK_DOC_FILES}
-    DESTINATION SimpleITK
+    DESTINATION ${SimpleITK_INSTALL_PYTHON_LIBRARY_DIR}/SimpleITK
     COMPONENT Runtime
     )
 
   install(TARGETS ${SWIG_MODULE_SimpleITKPython_TARGET_NAME}
-    RUNTIME DESTINATION SimpleITK COMPONENT Runtime
-    LIBRARY DESTINATION SimpleITK COMPONENT Runtime
+    RUNTIME DESTINATION ${SimpleITK_INSTALL_PYTHON_LIBRARY_DIR}/SimpleITK COMPONENT Runtime
+    LIBRARY DESTINATION ${SimpleITK_INSTALL_PYTHON_LIBRARY_DIR}/SimpleITK COMPONENT Runtime
     )
 else()
   include(LegacyPackaging.cmake)
